<?xml version="1.0"?>
<package>
  <name>apriltags</name>
  <version>0.1.2</version>
  <description>
  A catkin version of the C++ apriltags library.

  Forked from tps://github.com/RIVeR-Lab/apriltags_ros
  </description>

  <maintainer email="binnney@savioke.com">Jon Binney</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <run_depend>roscpp</run_depend>


  <export>
  </export>
</package>
