<?xml version="1.0"?>
<package>
  <name>apriltags</name>
  <version>0.1.4</version>
  <description>
  A catkin version of the C++ apriltags library.

  Forked from https://github.com/RIVeR-Lab/apriltags_ros
  </description>

  <maintainer email="binnney@savioke.com">Jon Binney</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>roscpp</run_depend>


  <export>
  </export>
</package>
